CHANGES
=======

0.3
---

- Rename package to kotti_media (was: kotti_video)
- Add tests (100% coverage from now on!)
- Add audio support

0.2
---

- Release for Kotti >= 0.7dev

0.1
---

- Initial release.