@@ -2,12 +2,11 @@
 use = egg:kotti
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
-pyramid.debug_notfound = false
+pyramid.debug_notfound = true
 pyramid.debug_routematch = false
 pyramid.debug_templates = true
 pyramid.default_locale_name = en
-pyramid.includes = pyramid_debugtoolbar
-                   pyramid_tm
+pyramid.includes = pyramid_tm
 sqlalchemy.url = sqlite:///%(here)s/Kotti.db
 
 kotti.site_title = Kotti does Media Files
