@@ -15,8 +15,8 @@ def kotti_configure(settings):
     settings['kotti.available_types'] += ' kotti_media.resources.WavFile'
 
     settings['kotti.available_types'] += ' kotti_media.resources.Video'
+    settings['kotti.available_types'] += ' kotti_media.resources.ChaptersFile'
     settings['kotti.available_types'] += ' kotti_media.resources.Mp4File'
-    settings['kotti.available_types'] += ' kotti_media.resources.WebmFile'
     settings['kotti.available_types'] += ' kotti_media.resources.OgvFile'
     settings['kotti.available_types'] += ' kotti_media.resources.SubtitlesFile'
-    settings['kotti.available_types'] += ' kotti_media.resources.ChaptersFile'
+    settings['kotti.available_types'] += ' kotti_media.resources.WebmFile'
